--- a/content/renderer/BUILD.gn
+++ b/content/renderer/BUILD.gn
@@ -208,8 +208,6 @@ target(link_target_type, "renderer") {
     "media/android/media_player_renderer_client.h",
     "media/android/media_player_renderer_client_factory.cc",
     "media/android/media_player_renderer_client_factory.h",
-    "media/android/renderer_media_player_manager.cc",
-    "media/android/renderer_media_player_manager.h",
     "media/android/renderer_surface_view_manager.cc",
     "media/android/renderer_surface_view_manager.h",
     "media/android/stream_texture_factory.cc",
@@ -408,6 +406,24 @@ target(link_target_type, "renderer") {
     "webscrollbarbehavior_impl_mac.h",
     "webscrollbarbehavior_impl_mac.mm",
   ]
+
+  if (enable_castanets) {
+    sources += [
+      "media/castanets/media_source_delegate_castanets.cc",
+      "media/castanets/media_source_delegate_castanets.h",
+      "media/castanets/renderer_demuxer_castanets.cc",
+      "media/castanets/renderer_demuxer_castanets.h",
+      "media/castanets/renderer_media_player_manager_castanets.cc",
+      "media/castanets/renderer_media_player_manager_castanets.h",
+      "media/castanets/webmediaplayer_castanets.cc",
+      "media/castanets/webmediaplayer_castanets.h",
+    ]
+  } else {
+    sources += [
+      "media/android/renderer_media_player_manager.cc",
+      "media/android/renderer_media_player_manager.h",
+    ]
+  }
 
   if (!is_component_build) {
     if (is_win && is_official_build) {
